added one section to index html

--- a/index.html
+++ b/index.html
@@ -42,85 +42,77 @@
 
     <!--Main Content -->
     <main>
-        <section id="welcome" >
+        <section id="welcome">
             <div id="cover-text">
                 <h3>Home away from home; Relaxation and tranquility in the countryside</h3>
         </section>
-        <!--About us section starts here-->
 
-        <section id="about">
-            <h2>About us</h2>
-            <p>
-                Owen's Homestay Resort provides a comfortable, down-to-earth relaxing
-                home feel for a refreshing holiday experience. Located on a 20-acre
-                mixed farm, about 50 Km North of Kampala Capital City, Owen's Homestay
-                Resort offers tranquility away from the hustle and bustle of city.
-                Below are some the activities that might interest you during
-                your stay, of course depending of the season of the year.
-            </p>
+        <section id="reasons">
 
-            <div>
-                <figure>
-                    <img src="" />
-                    <figcaption>Mango trees at Owen's Homestay</figcaption>
-                </figure>
-            </div>
-        </section>
-        <!--About us section ends here-->
+            <h2>Reasons to visit us.</h2>
 
-        <!--Activities section starts here-->
+            <!--About us division starts here-->
 
-        <section id="activities">
-            <h3>Activities</h3>
-            <p>
-                Whether you want to relax and enjoy the sun or discover what the farm
-                has to offer, there are several stress-free activities to keep you
-                engaged with nature in relaxed environment. These include:
-            </p>
-            <ul>
-                <li>Bird watching</li>
-                <li>Fruit picking</li>
-                <li>Honey harvesting</li>
-                <li>Sport fishing</li>
-                <li>Kitchen Gardening</li>
-            </ul>
-        </section>
-        <!--Accomodation section starts here-->
-        <section id="accomodation">
-            <h3>Accomodation</h3>
+            <div id="about-us">
+                <div id="location">
+                    <h3>About us</h3>
+                    <p>
+                        Owen's Homestay Resort provides a comfortable, down-to-earth relaxing
+                        home feel for a refreshing holiday experience. Located on a 20-acre
+                        mixed farm, about 50 Km North of Kampala Capital City, Owen's Homestay
+                        Resort offers tranquility away from the hustle and bustle of city.
+                        Below are some the activities that might interest you during
+                        your stay, of course depending of the season of the year.
+                    </p>
+                </div>
+                <div id="activities">
+                    <h3>Activities</h3>
+                    <p>
+                        Whether you want to relax and enjoy the sun or discover what the farm
+                        has to offer, there are several stress-free activities to keep you
+                        engaged with nature in relaxed environment. These include:
 
-            <div>
-                <h4>Standard Cottage</h4>
-                <p>Features:</p>
-                <ul>
-                    <li>King size bed</li>
-                    <li>Ensuite bathroom</li>
-                    <li>
-                        Private Kitchen with modern appliances (Gas cooker+electric oven,
-                        dishwasher)
-                    </li>
-                    <li>Washing machine</li>
-                    <li>Living area</li>
-                    <li>WiFi</li>
-                    <li>DSTV</li>
-                </ul>
+                    <ul>
+                        <li>Bird watching</li>
+                        <li>Fruit picking</li>
+                        <li>Honey harvesting</li>
+                        <li>Sport fishing</li>
+                        <li>Kitchen Gardening</li>
+                    </ul>
+                    </p>
+                </div>
             </div>
 
-            <div>
+            <!--Accomodation division starts here-->
+            <div id="accomodation">
+                <div id="standard-cottage">
+                    <h3>Standard Cottage</h3>
+                    <p>Features:</p>
+                    <ul>
+                        <li>King size bed</li>
+                        <li>Ensuite bathroom</li>
+                        <li>Private Kitchen with modern appliances</li>
+                        <li>Washing machine</li>
+                        <li>Living area</li>
+                        <li>WiFi</li>
+                        <li>DSTV</li>
+                    </ul>
+                </div>
 
-                <h4>Family Cottage</h4>
-
-                <p>Features:</p>
-                <ul>
-                    <li>1 bedroom with King size bed</li>
-                    <li>2 rooms with a Full Double size bed</li>
-                    <li>Ensuite bathroom</li>
-                    <li>Private Kitchen with modern appliances</li>
-                    <li>Washing machine</li>
-                    <li>Living area</li>
-                    <li>WiFi</li>
-                    <li>DSTV</li>
-                </ul>
+                <div id="family-cottage">
+                    <h3>Family Cottage</h3>
+                    <p>Features:</p>
+                    <ul>
+                        <li>1 bedroom with King size bed</li>
+                        <li>2 rooms with a Full Double size bed</li>
+                        <li>Ensuite bathroom</li>
+                        <li>Private Kitchen with modern appliances</li>
+                        <li>Washing machine</li>
+                        <li>Living area</li>
+                        <li>WiFi</li>
+                        <li>DSTV</li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
