added line breaks to home page

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div id="about-us">
                 <div id="location">
                     <h3>About us</h3>
+                    <hr>
                     <p>
                         Owen's Homestay Resort provides a comfortable, down-to-earth relaxing
                         home feel for a refreshing holiday experience. Located on a 20-acre
@@ -67,6 +68,7 @@
                 </div>
                 <div id="activities">
                     <h3>Activities</h3>
+                    <hr>
                     <p>
                         Whether you want to relax and enjoy the sun or discover what the farm
                         has to offer, there are several stress-free activities to keep you
@@ -85,8 +87,10 @@
 
             <!--Accomodation division starts here-->
             <div id="accomodation">
-                <div id="standard-cottage">
-                    <h3>Standard Cottage</h3>
+                <h3>Accomodation</h3>
+                <hr>
+                <div id="standard-cottage">                                    
+                    <h4>Standard Cottage</h4>
                     <p>Features:</p>
                     <ul>
                         <li>King size bed</li>
@@ -100,7 +104,7 @@
                 </div>
 
                 <div id="family-cottage">
-                    <h3>Family Cottage</h3>
+                    <h4>Family Cottage</h4>
                     <p>Features:</p>
                     <ul>
                         <li>1 bedroom with King size bed</li>
