added new graphics and display style to homepage

--- a/index.html
+++ b/index.html
@@ -44,12 +44,10 @@
     <main>
         <section id="welcome">
             <div id="cover-text">
-                <h3>Home away from home; Relaxation and tranquility in the countryside</h3>
+                <h3>Relaxation and tranquility in the countryside</h3>
         </section>
 
         <section id="reasons">
-
-            <h2>Reasons to visit us.</h2>
 
             <!--About us division starts here-->
 
@@ -86,11 +84,11 @@
             </div>
 
             <!--Accomodation division starts here-->
-            <div id="accomodation">
+            <div id="accommodation">
                 <h3>Accomodation</h3>
                 <hr>
-                <div id="standard-cottage">                                    
-                    <h4>Standard Cottage</h4>
+                <div id="standard-cottage">
+                    <h3>Standard Cottage</h3>
                     <p>Features:</p>
                     <ul>
                         <li>King size bed</li>
@@ -104,7 +102,7 @@
                 </div>
 
                 <div id="family-cottage">
-                    <h4>Family Cottage</h4>
+                    <h3>Family Cottage</h3>
                     <p>Features:</p>
                     <ul>
                         <li>1 bedroom with King size bed</li>
@@ -116,7 +114,11 @@
                         <li>WiFi</li>
                         <li>DSTV</li>
                     </ul>
+
                 </div>
+            </div>
+            <div id="about-us-image">
+                <div id="ducks-in-pond"></div>
             </div>
         </section>
     </main>
