--- a/gallery.html
+++ b/gallery.html
@@ -46,22 +46,20 @@
         <!-- Images for the gallery section to be placed here.-->
 
         <section id="gallery">
-            <h2>Gallery</h2>
-            <figure id="gallery1">
-                <img src="https://imgur.com/13Ik1RI" />
-                <figcaption>Photo2</figcaption>
-            </figure>
-
-            <figure id="gallery2">
-                <img src="" />
-                <figcaption>Photo2</figcaption>
-            </figure>
-            <figure id="gallery3">
-                <img src="" />
-                <figcaption>Photo3</figcaption>
-            </figure>
+            <div id="photos">
+                <img src="assets/Images/gallery/athletes.webp" alt="Two athletes running together">
+                <img src="assets/Images/gallery/girls.webp" alt="Three girls at charity paint running festival">
+                <img src="assets/Images/gallery/runner3.webp" alt="Solo male runner jogging on beach">
+                <img src="assets/Images/gallery/man.webp" alt="Man at charity paint running festival">
+                <img src="assets/Images/gallery/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+                <img src="assets/Images/gallery/runner2.webp" alt="Runners competing in marathon">
+                <img src="assets/Images/gallery/runner4.webp" alt="Solo female runner jogging on beach">
+                <img src="assets/Images/gallery/running_gang.webp"
+                    alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/Images/gallery/mud-run.webp"
+                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+            </div>
         </section>
-
 
     </main>
 
