--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
 
                     <label for="inquiries">Your message</label>
                     <br />
-                    <textarea id="inquiries" rows="10" cols="40" name="inquiries"
+                    <textarea id="inquiries" rows="10" cols="25" class="none" name="inquiries"
                         placeholder="Write your message here.."></textarea>
                     <br />
                     <button tyupe="submit">Submit</button>
