--- a/gallery.html
+++ b/gallery.html
@@ -47,17 +47,17 @@
 
         <section id="gallery">
             <div id="photos">
-                <img src="assets/Images/gallery/athletes.webp" alt="Two athletes running together">
-                <img src="assets/Images/gallery/girls.webp" alt="Three girls at charity paint running festival">
-                <img src="assets/Images/gallery/runner3.webp" alt="Solo male runner jogging on beach">
-                <img src="assets/Images/gallery/man.webp" alt="Man at charity paint running festival">
-                <img src="assets/Images/gallery/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
-                <img src="assets/Images/gallery/runner2.webp" alt="Runners competing in marathon">
-                <img src="assets/Images/gallery/runner4.webp" alt="Solo female runner jogging on beach">
-                <img src="assets/Images/gallery/running_gang.webp"
-                    alt="Large group of runners taking part in a marathon on a rainy day">
-                <img src="assets/Images/gallery/mud-run.webp"
-                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+                <img src="assets\Images\gallery\banana-plantation.webp" alt="Banana plantataion">
+                <img src="assets\Images\gallery\duck-at-pond.webp" alt="Duck at fish pond">
+                <img src="assets\Images\gallery\garden.webp" alt="Picture of cassava and trees in the garden">
+                <img src="assets\Images\gallery\guava-juice.webp" alt="Jar of guava juice on a table">
+                <img src="assets\Images\gallery\lemon-tree.webp" alt="Lemon fruit tree with ripe fruits">
+                <img src="assets\Images\gallery\ripe-guava.webp" alt="Ripe guava fruits on a plate">
+                <img src="assets\Images\gallery\walkway.webp" alt="Walk way in the gardens">
+                <img src="assets\Images\gallery\zipline.webp"
+                    alt="A young boy on a zip line">
+                <img src="assets/Images/gallery/zipline2.webp"
+                    alt="A young girl on a zip line">
             </div>
         </section>
 
