edited contact form

--- a/contact.html
+++ b/contact.html
@@ -78,15 +78,15 @@
                         <br>
 
                         <label for="firstname">First Name</label>
-                        <input id="firstname" type="text" name="First_Name" placeholder="Your first name." required />
+                        <input id="firstname" type="text" name="firstname" placeholder="Your first name." required />
                         <br />
                         <label for="lastname">Full Name</label>
-                        <input id="lastname" type="text" name="Last_Name" placeholder="Your last name" required />
+                        <input id="lastname" type="text" name="lastname" placeholder="Your last name" required />
 
                         <br>
 
                         <label for="email">Your Email</label>
-                        <input id="email" type="text" name="Customer_email" required />
+                        <input id="email" type="email" name="email" required />
 
                         <br />
 
