edited contact form

--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
                         <label for="inquiries">Your message</label>
                         <br />
                         <textarea id="inquiries" rows="10" cols="25" class="none" name="inquiries"
-                            placeholder="Write your message here.."></textarea>
+                            placeholder="Write your message here.." required></textarea>
                         <br />
                         <button tyupe="submit">Submit</button>
                     </fieldset>
