edited contact html after html validation with Nu Html Checker

--- a/contact.html
+++ b/contact.html
@@ -45,16 +45,16 @@
         <!--Contact information section starts here-->
 
         <section id="contact">
-            <div id=" postal-address">
+            <div id="postal-address">
                 <h2>Contact us:</h2>
                 <h3>Address:</h3>
                 <p>
-                    Owens Crescent Road, <br />
-                    Zirobwe Sub county<br />
+                    Owens Crescent Road, <br>
+                    Zirobwe Sub county <br>
                     Luwero District, Uganda
                 </p>
                 <p>
-                    Tel. +256 123 456 789 <br />
+                    Tel. +256 123 456 789 <br>
                     Email: info@owenshomestay.net
                 </p>
             </div>
@@ -68,34 +68,34 @@
                     <fieldset id="input-form">
                         <legend>Your details and message </legend>
                         <label for="mgender">Mr.</label>
-                        <input id="mgender" type="radio" name="mgender" checked />
+                        <input id="mgender" type="radio" name="mgender" checked>
 
-                        <br />
+                        <br>
 
                         <label for="fgender">Ms.</label>
-                        <input id="fgender" type="radio" name="fgender" />
+                        <input id="fgender" type="radio" name="fgender">
 
                         <br>
 
                         <label for="firstname">First Name</label>
-                        <input id="firstname" type="text" name="firstname" placeholder="Your first name." required />
-                        <br />
+                        <input id="firstname" type="text" name="firstname" placeholder="Your first name." required>
+                        <br>
                         <label for="lastname">Full Name</label>
-                        <input id="lastname" type="text" name="lastname" placeholder="Your last name" required />
+                        <input id="lastname" type="text" name="lastname" placeholder="Your last name" required>
 
                         <br>
 
                         <label for="email">Your Email</label>
-                        <input id="email" type="email" name="email" required />
+                        <input id="email" type="email" name="email" required>
 
-                        <br />
+                        <br>
 
                         <label for="inquiries">Your message</label>
-                        <br />
+                        <br>
                         <textarea id="inquiries" rows="10" cols="25" class="none" name="inquiries"
                             placeholder="Write your message here.." required></textarea>
-                        <br />
-                        <button tyupe="submit">Submit</button>
+                        <br>
+                        <button type="submit">Submit</button>
                     </fieldset>
                 </form>
             </div>
