edited gallery html paths

--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
@@ -42,24 +42,18 @@
 
     <!--Main Content -->
     <main>
- 
         <!-- Images for the gallery section to be placed here.-->
-
-        <section id="gallery">
-            <div id="photos">
-                <img src="assets\Images\gallery\banana-plantation.webp" alt="Banana plantataion">
-                <img src="assets\Images\gallery\duck-at-pond.webp" alt="Duck at fish pond">
-                <img src="assets\Images\gallery\garden.webp" alt="Picture of cassava and trees in the garden">
-                <img src="assets\Images\gallery\guava-juice.webp" alt="Jar of guava juice on a table">
-                <img src="assets\Images\gallery\lemon-tree.webp" alt="Lemon fruit tree with ripe fruits">
-                <img src="assets\Images\gallery\ripe-guava.webp" alt="Ripe guava fruits on a plate">
-                <img src="assets\Images\gallery\walkway.webp" alt="Walk way in the gardens">
-                <img src="assets\Images\gallery\zipline.webp"
-                    alt="A young boy on a zip line">
-                <img src="assets/Images/gallery/zipline2.webp"
-                    alt="A young girl on a zip line">
-            </div>
-        </section>
+        <div id="photos">
+            <img src="assets/Images/gallery/banana-plantation.webp" alt="Banana plantataion">
+            <img src="assets/Images/gallery/duck-at-pond.webp" alt="Duck at fish pond">
+            <img src="assets/Images/gallery/garden.webp" alt="Picture of cassava and trees in the garden">
+            <img src="assets/Images/gallery/guava-juice.webp" alt="Jar of guava juice on a table">
+            <img src="assets/Images/gallery/lemon-tree.webp" alt="Lemon fruit tree with ripe fruits">
+            <img src="assets/Images/gallery/ripe-guava.webp" alt="Ripe guava fruits on a plate">
+            <img src="assets/Images/gallery/walkway.webp" alt="Walk way in the gardens">
+            <img src="assets/Images/gallery/zipline.webp" alt="A young boy on a zip line">
+            <img src="assets/Images/gallery/zipline2.webp" alt="A young girl on a zip line">
+        </div>
 
     </main>
 
