edited index html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
@@ -45,6 +45,7 @@
         <section id="welcome">
             <div id="cover-text">
                 <h3>Relaxation and tranquility in the countryside</h3>
+            </div>
         </section>
 
         <section id="reasons">
@@ -71,6 +72,7 @@
                         Whether you want to relax and enjoy the sun or discover what the farm
                         has to offer, there are several stress-free activities to keep you
                         engaged with nature in relaxed environment. These include:
+                    </p>
 
                     <ul>
                         <li>Bird watching</li>
@@ -78,8 +80,7 @@
                         <li>Honey harvesting</li>
                         <li>Sport fishing</li>
                         <li>Kitchen Gardening</li>
-                    </ul>
-                    </p>
+                    </ul>                    
                 </div>
             </div>
 
